--- a/lib/Web/XPath/Evaluator.pod
+++ b/lib/Web/XPath/Evaluator.pod
@@ -181,6 +181,9 @@ XML Path Language (XPath) Version 1.0 Specification Errata
 HTML - Interactions with XPath and XSLT
 <http://www.whatwg.org/specs/web-apps/current-work/#interactions-with-xpath-and-xslt>.
 
+The C</> at the beginning of the location path MUST select the root of
+the context node.
+
 If an operand of C<=> or C<!=> is an object of a type other than the
 four basic types, it is converted in a way that is dependent on that
 type.  It is an error if it is not defined.
@@ -199,6 +202,11 @@ evaluation MUST be immediately aborted.
 =item DOM
 
 DOM Standard <http://dom.spec.whatwg.org/>.
+
+=item HTML
+
+HTML Standard - Interaction of template elements with XSLT and XPath
+<http://www.whatwg.org/specs/web-apps/current-work/#template-XSLT-XPath>.
 
 =back
 
