--- a/lib/Web/XML/Parser.pod
+++ b/lib/Web/XML/Parser.pod
@@ -114,15 +114,22 @@ DOM Level 3 Core - Infoset Mapping
 XML5.  See <http://suika.fam.cx/~wakaba/wiki/sw/n/XML5> for
 references.
 
+XXX XML-DOM mapping is not fully defined.
+
+The C<xmlns> attribute in an XML document MUST be mapped to an C<Attr>
+object whose namespace is the XMLNS namespace and name is C<xmlns>.
+
 =item [HTML]
 
-HTML Living Standard -Parsing XHTML documents
+HTML Living Standard - Parsing XHTML documents
 <http://www.whatwg.org/specs/web-apps/current-work/#parsing-xhtml-documents>.
 
 =item [XMLCC]
 
 manakai's XML Conformance Checking
 <http://suika.fam.cx/www/markup/xml/xmlcc/xmlcc-work>.
+
+XXX This document is out of date.
 
 =item [DTDEF]
 
