--- a/lib/Web/HTML/Validator.pod
+++ b/lib/Web/HTML/Validator.pod
@@ -226,6 +226,11 @@ Atom 1.0, Atom Threading Extension.
 For Atom documents, references to RFC 3066 are replaced by references
 to BCP 47.
 
+The content model of the C<atom:email> element is updated as follows:
+The C<atom:email> element MUST NOT contain child elements.  The
+content of the element MUST be text which is a valid e-mail address
+[HTML].  (This is a willful violation of RFC 5322 and RFC 4287.)
+
 For more information, see
 <http://suika.suikawiki.org/gate/2007/html/standards>.
 
