Moved encoding data to web-encodings module

--- a/lib/Web/HTML/InputStream.pod
+++ b/lib/Web/HTML/InputStream.pod
@@ -11,8 +11,8 @@ standalone.
 
 =head1 DEPENDENCY
 
-The module requires L<Web::Encoding::UnivCharDet> in the
-<https://github.com/manakai/perl-web-encodings> repository.
+The module requires L<Web::Encoding> and L<Web::Encoding::UnivCharDet>
+in the <https://github.com/manakai/perl-web-encodings> repository.
 
 =head1 SEE ALSO
 
