--- a/lib/Web/XML/Parser.pod
+++ b/lib/Web/XML/Parser.pod
@@ -66,8 +66,10 @@ The method returns the result node list.
 =item $parser->onerror ($new_code)
 
 Get or set the error handler for the parser.  Any parse error, as well
-as warning and information, is reported to the handler.  See
-L<Web::Errors> for more information.
+as warning and additional processing information, is reported to the
+handler.  See
+<https://github.com/manakai/data-errors/blob/master/doc/onerror.txt>
+for details of error handling.
 
 =item $parser->throw ($code)
 
@@ -88,7 +90,7 @@ specified as an argument to parse methods.
 
 L<Message::DOM::Document>, L<Message::DOM::Element>.
 
-L<Web::ContentChecker>.
+L<Web::HTML::Validator>.
 
 L<Web::HTML::Parser>.
 
@@ -111,7 +113,7 @@ XML Information Set <http://www.w3.org/TR/xml-infoset/>.
 DOM Level 3 Core - Infoset Mapping
 <http://www.w3.org/TR/DOM-Level-3-Core/infoset-mapping.html>.
 
-XML5.  See <http://suika.fam.cx/~wakaba/wiki/sw/n/XML5> for
+XML5.  See <http://suika.suikawiki.org/~wakaba/wiki/sw/n/XML5> for
 references.
 
 XXX XML-DOM mapping is not fully defined.
@@ -127,19 +129,19 @@ HTML Living Standard - Parsing XHTML documents
 =item [XMLCC]
 
 manakai's XML Conformance Checking
-<http://suika.fam.cx/www/markup/xml/xmlcc/xmlcc-work>.
+<http://suika.suikawiki.org/www/markup/xml/xmlcc/xmlcc-work>.
 
 XXX This document is out of date.
 
 =item [DTDEF]
 
 DOM Document Type Definition Module
-<http://suika.fam.cx/www/markup/xml/domdtdef/domdtdef-work>.
+<http://suika.suikawiki.org/www/markup/xml/domdtdef/domdtdef-work>.
 
 =item [MANAKAI]
 
 manakai DOM Extensions
-<http://suika.fam.cx/~wakaba/wiki/sw/n/manakai%20DOM%20Extensions>.
+<http://suika.suikawiki.org/~wakaba/wiki/sw/n/manakai%20DOM%20Extensions>.
 
 =back
 
