--- a/lib/Web/XML/Parser.pod
+++ b/lib/Web/XML/Parser.pod
@@ -94,6 +94,10 @@ L<Web::HTML::Validator>.
 
 L<Web::HTML::Parser>.
 
+See
+<http://suika.suikawiki.org/~wakaba/wiki/sw/n/manakai++Predefined%20User%20Data%20Names>
+for details of source location annotations using DOM3 user data.
+
 =head1 SPECIFICATIONS
 
 =over 4
